// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decorate proxies 1`] = `
{
  "b": {
    "configurable": true,
    "enumerable": true,
    "get": [Function],
    "set": [Function],
  },
  "double": {
    "configurable": true,
    "enumerable": false,
    "value": [Function],
    "writable": false,
  },
  "x": {
    "configurable": true,
    "enumerable": true,
    "get": [Function],
    "set": [Function],
  },
  "y": {
    "configurable": true,
    "enumerable": false,
    "get": [Function],
    "set": [Function],
  },
  Symbol(mobx administration): {
    "configurable": true,
    "enumerable": false,
    "value": "(omitted)",
    "writable": true,
  },
}
`;

exports[`extend proxies 1`] = `
{
  "b": {
    "configurable": true,
    "enumerable": true,
    "get": [Function],
    "set": [Function],
  },
  "double": {
    "configurable": true,
    "enumerable": false,
    "value": [Function],
    "writable": false,
  },
  "x": {
    "configurable": true,
    "enumerable": true,
    "get": [Function],
    "set": [Function],
  },
  "y": {
    "configurable": true,
    "enumerable": false,
    "get": [Function],
    "set": [Function],
  },
  Symbol(mobx administration): {
    "configurable": true,
    "enumerable": false,
    "value": "(omitted)",
    "writable": true,
  },
}
`;

exports[`non-proxied object 1`] = `
{
  "b": {
    "configurable": true,
    "enumerable": true,
    "value": 4,
    "writable": true,
  },
  "double": {
    "configurable": true,
    "enumerable": false,
    "value": [Function],
    "writable": false,
  },
  "x": {
    "configurable": true,
    "enumerable": true,
    "get": [Function],
    "set": [Function],
  },
  "y": {
    "configurable": true,
    "enumerable": false,
    "get": [Function],
    "set": [Function],
  },
  Symbol(mobx administration): {
    "configurable": true,
    "enumerable": false,
    "value": "(omitted)",
    "writable": true,
  },
}
`;
